Fix Quit button not showing at 1080p

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/options.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/options.css
@@ -23,7 +23,7 @@
     flow-children: right;
     vertical-align: middle;
     horizontal-align: left;
-    height: 660px;
+    height: 700px;
     width: 160px;
     font-size: 16;
     background-color: #181818dd;
